--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "weather",
+  "name": "weather-app",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.0.0"
   }
 }
